--- a/CashRegister/CashRegister.csproj
+++ b/CashRegister/CashRegister.csproj
@@ -169,6 +169,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="beep.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="items.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
